--- a/APP/index.html
+++ b/APP/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YUDESI ORGANIC SUPPLIES LIMITED</title>
-    <link rel="shortcut icon" href="/ASSETS/WhatsApp Image 2024-02-11 at 16.19.25 (1).jpeg" type="image/x-icon">
+    <link rel="shortcut icon" href="https://advance1999.github.io/YUDESI-ORGANIC-SUPPLIES-LIMITED/ASSETS/WhatsApp Image 2024-02-11 at 16.19.25 (1).jpeg" type="image/x-icon">
 </head>
 <link rel="stylesheet" href="style.css">
 <body>
